--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello world!
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Nausheen Husain</title>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'> -->
+	<!-- <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> -->
+	<!-- <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"> -->
+	<link type="text/css" rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+	
+	<p>This page is under construction. Come back soon!</p>
+
+
+	<!-- About Row -->
+	<!-- <div id="end"> -->
+		<!-- <h4>this page was published by github pages. fonts: montserrat, open sans.</h4> -->
+	<!-- </div> -->
+
+</body>
+</html>
