--- a/wottest.html
+++ b/wottest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Nausheen Husain</title>
+	<title>Submit your photo story!</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,30 +14,30 @@
 <body>
 	
 	<div class="header">
-		<h1 class="ubuntu-bold">We want your photo stories.</h1>
-		<p class="open-sans-copy">Our team is collecting photos and short stories about your experiences with the American 'War On Terror.' Send yours to counternarratives2025@gmail.com and, if selected, it'll be displayed at our fall symposium in Syracuse, New York. (We'll also send you $50.)</p>
+		<img src="sample.jpg" />
+		<p class="open-sans-copy">This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. This is a photo story. </p>
 	</div>
 
 	<div class="body-copy">
-		<p class="open-sans-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h1 class="ubuntu-bold">We want your photo stories.</h1>
+		<p class="open-sans-copy">For two years, our team, based at Syracuse University, has been analyzing agenda-setting media coverage of those targeted by the American 'War On Terror,' particularly Black, Arab, South Asian, and Muslim men who have come under scrutiny by American law enforcement. We've found that, despite objectivity being an oft-stated goal of our news systems, these men and their communities are often subject to reporting practices that end up vilifying them.</p>
 
-		<p class="open-sans-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p class="open-sans-copy">An important part of our work is making sure that counternarratives exist, particularly for those who have been portrayed as uncomplicated demons in our news and other media.</p>
+
+		<p class="open-sans-copy">Our team is collecting photos and short stories about your experiences during the American 'War On Terror.' Tell us about your families and friends, your communities, your post-9/11 memories, whether upsetting, funny, or anything in between. (One of our team was asked by a middle school classmate if Saddam Hussein was her uncle; unfortunately, no photo exists.)</p>
+
+		<p class="open-sans-copy"><strong>Send your photo story to <a href="mailto:counternarratives2025@gmail.com" target="_blank"> counternarratives2025@gmail.com</a> and, if selected, it'll be displayed at our fall research symposium in Syracuse, New York. (We'll also send you compensation of $50.) None of your photos or stories will be put online without your explicit permission.</strong></p>
+	</div>
+
+	<div class="body-copy">
+		<h1 class="ubuntu-bold">More about our work</h1>
+		<p class="open-sans-copy"> </p>
 	</div>
 
 
 	<!-- About Row -->
 	<div class="ubuntu-bold" id="end">
-		<h4>this page was published by github pages. fonts: ubuntu, open sans.</h4>
+		<h4>This project is supported by the <a href="https://lendercenter.syr.edu/" target="_blank">Lender Center For Social Justice at Syracuse University</a> and the New York Humanities Center. This page was published using Github Pages. Fonts used: Ubuntu, Open Sans.</h4>
 	</div>
 
 </body>
