--- a/wottest.html
+++ b/wottest.html
@@ -26,7 +26,7 @@
 
 		<p class="open-sans-copy">Our team is collecting photos and short stories about your experiences during the American 'War On Terror.' Tell us about your families and friends, your communities, your post-9/11 memories, whether upsetting, funny, or anything in between. (One of our team was asked by a middle school classmate if Saddam Hussein was her uncle; unfortunately, no photo exists.)</p>
 
-		<p class="open-sans-copy"><strong>Send your photo story to <a href="mailto:counternarratives2025@gmail.com" target="_blank"> counternarratives2025@gmail.com</a> and, if selected, it'll be displayed at our fall research symposium in Syracuse, New York. (We'll also send you compensation of $50.) None of your photos or stories will be put online without your explicit permission.</strong></p>
+		<p class="open-sans-copy"><strong>Send a high quality (if possible) photo plus a story to <a href="mailto:counternarratives2025@gmail.com" target="_blank"> counternarratives2025@gmail.com</a> and, if selected, it'll be displayed at our fall research symposium in Syracuse, New York. (We'll also send you compensation of $50.) None of your photos or stories will be put online without your explicit permission. We may edit displayed stories for length.</strong></p>
 	</div>
 
 	<div class="body-copy">
