--- a/wottest.html
+++ b/wottest.html
@@ -20,14 +20,14 @@
 	</div>
 
 	<div class="body-copy">
-		<h1 class="ubuntu-bold">We want your photo stories.</h1>
+		<h1 class="ubuntu-bold">We want your photo stories and art.</h1>
 		<p class="open-sans-copy">For two years, our team, based at Syracuse University, has been analyzing agenda-setting media coverage of those targeted by the American 'War On Terror,' particularly Black, Arab, South Asian, and Muslim men who have come under scrutiny by American law enforcement. We've found that, despite objectivity being an oft-stated goal of our news systems, these men and their communities are often subject to reporting practices that end up vilifying them.</p>
 
 		<p class="open-sans-copy">An important part of our work is making sure that counternarratives exist, particularly for those who have been portrayed as uncomplicated demons in our news and other media.</p>
 
-		<p class="open-sans-copy">Our team is collecting photos and short stories about your experiences during the American 'War On Terror.' Tell us about your families and friends, your communities, your post-9/11 memories, whether upsetting, funny, or anything in between. (One of our team was asked by a middle school classmate if Saddam Hussein was her uncle; unfortunately, no photo exists.)</p>
+		<p class="open-sans-copy">Our team is collecting art pieces, photos, and short stories about your experiences during the American 'War On Terror.' Tell us about your families and friends, your communities, your post-9/11 memories, whether upsetting, funny, or anything in between. (One of our team was asked by a middle school classmate if Saddam Hussein was her uncle; unfortunately, no photo exists.)</p>
 
-		<p class="open-sans-copy"><strong>Send a high quality (if possible) photo plus a short description or related story to <a href="mailto:counternarratives2025@gmail.com" target="_blank"> counternarratives2025@gmail.com</a> and, if selected, it'll be displayed at our fall research symposium in Syracuse, New York. (We'll also send you compensation of $50.) None of your photos or stories will be put online without your explicit permission. We may edit displayed stories for length.</strong></p>
+		<p class="open-sans-copy"><strong>Send us either a piece of art, or a high quality (if possible) photo, plus a short description or related story to <a href="mailto:counternarratives2025@gmail.com" target="_blank"> counternarratives2025@gmail.com</a> and, if selected, it'll be displayed at our fall research symposium in Syracuse, New York. (We'll also send you compensation of $50.) None of your photos or stories will be put online without your explicit permission. We may edit displayed stories for length.</strong></p>
 	</div>
 
 	<div class="body-copy">
