Adds another photo story and header

--- a/wottest.html
+++ b/wottest.html
@@ -13,7 +13,12 @@
 
 <body>
 	
-	<div class="header">
+	<div class="body-copy">
+		<h1 class="ubuntu-bold">'Elite' media coverage of Arabs and Muslims tends to be driven by law enforcement</h1>
+		<p class="open-sans-copy"><i>We don't have to rely on these media platforms to tell our stories. Our team is researching the narratives given to us about specific Muslim men -- and whether or not they've met journalistic standards -- and collecting your stories to create counternarratives.</i></p>
+	</div>
+
+	<div class="photo-story">
 		<img src="OB2.JPG" />
 		<h4>Our roots</h4>
 		<p class="open-sans-copy"><i>Growing up biracial is confusing, but growing up biracial in rural Ohio is a whole other story. My sister and I did our best to lean into our Pakistani heritage; we wore gifts from our family in Karachi, read books about Pakistan, and even took Urdu for a few years. The older I got, the more I realized how politicized that identity is. Today, I do my best to stay in touch with that side, but it’s harder the more demonized South Asian people are.</i></p>
@@ -28,6 +33,12 @@
 		<p class="open-sans-copy">Our team is collecting art pieces, photos, and short stories about your experiences during the American 'War On Terror.' Tell us about your families and friends, your communities, your post-9/11 memories, whether upsetting, funny, or anything in between. (One of our team was asked by a middle school classmate if Saddam Hussein was her uncle; unfortunately, no photo exists.)</p>
 
 		<p class="open-sans-copy"><strong>Send us either a piece of art, or a high quality (if possible) photo, plus a short description or related story to <a href="mailto:counternarratives2025@gmail.com" target="_blank"> counternarratives2025@gmail.com</a> and, if selected, it'll be displayed at our fall research symposium in Syracuse, New York. (We'll also send you compensation of $50.) None of your photos or stories will be put online without your explicit permission. We may edit displayed stories for length.</strong></p>
+	</div>
+
+	<div class="photo-story">
+		<img src="farzana.jpg" />
+		<h4>Farzana Aunty</h4>
+		<p class="open-sans-copy"><i>naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story naush's photo story </i></p>
 	</div>
 
 	<div class="body-copy">
