--- a/wottest.html
+++ b/wottest.html
@@ -14,7 +14,7 @@
 <body>
 	
 	<div class="body-copy">
-		<h1 class="ubuntu-bold">'Elite' media coverage of Arabs and Muslims tends to be driven by law enforcement</h1>
+		<h1 class="ubuntu-bold">'Elite' media coverage of Muslims tends to be driven by law enforcement</h1>
 		<p class="open-sans-copy"><i>We don't have to rely on these media platforms to tell our stories. Our team is researching the narratives given to us about specific Muslim men -- and whether or not they've met journalistic standards -- and collecting your stories to create counternarratives.</i></p>
 	</div>
 
