Adds some text to subhed

--- a/wottest.html
+++ b/wottest.html
@@ -15,7 +15,8 @@
 	
 	<div class="body-copy">
 		<h1 class="ubuntu-bold">'Elite' media coverage of Muslims tends to be driven by law enforcement</h1>
-		<p class="open-sans-copy"><i>We don't have to rely on these media platforms to tell our stories. Our team is researching the narratives given to us about specific Muslim men -- and whether or not they've met journalistic standards -- and collecting your stories to create counternarratives.</i></p>
+		<p id="subhed" class="open-sans-copy"><i>We don't have to rely on these media platforms to tell our stories. Our team is researching the narratives given to us about specific Muslim men -- and whether or not they've met journalistic standards -- and collecting your stories to create counternarratives.</i></p>
+		<p id="subhed" class="open-sans-copy"><i>We're asking those affected by the 'War On Terror' to send us their art or photo stories for our collection of counternarratives.</i></p>
 	</div>
 
 	<div class="photo-story">
