--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Submit your photo story!</title>
-	<!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
-	<!-- <link rel="icon" href="/favicon.ico" type="image/x-icon"> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="index.css" />
+	<link type="text/css" rel="stylesheet" href="index-responsive-final.css" />
 </head>
 
 <body>
@@ -22,7 +21,7 @@
 	<div class="photo-story">
 		<img src="OB2.JPG" />
 		<h4>Our roots</h4>
-		<p class="open-sans-copy"><i>Growing up biracial is confusing, but growing up biracial in rural Ohio is a whole other story. My sister and I did our best to lean into our Pakistani heritage; we wore gifts from our family in Karachi, read books about Pakistan, and even took Urdu for a few years. The older I got, the more I realized how politicized that identity is. Today, I do my best to stay in touch with that side, but it’s harder the more demonized South Asian people are.</i></p>
+		<div><p class="open-sans-copy"><i>Growing up biracial is confusing, but growing up biracial in rural Ohio is a whole other story. My sister and I did our best to lean into our Pakistani heritage; we wore gifts from our family in Karachi, read books about Pakistan, and even took Urdu for a few years. The older I got, the more I realized how politicized that identity is. Today, I do my best to stay in touch with that side, but it’s harder the more demonized South Asian people are.</i></p></div>
 	</div>
 
 	<div class="body-copy">
