--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Submit your photo story!</title>
+	<title>Submit your art or writing!</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -36,9 +36,9 @@
 	</div>
 
 	<div class="photo-story">
-		<img src="omar.JPG" />
-		<h4>Mosque with bridge</h4>
-		<div><p class="open-sans-copy"><i>Made with water color, by Omar Rezak, political prisoner.</i></p></div>
+		<img src="Shnewer.jpg" />
+		<h4>Eid mubarak -- Eid Mubarak is an Arabic, Islamic greeting which means “Blessed Feast” which marks the end of Ramadan and the fast.</h4>
+		<div><p class="open-sans-copy"><i>Colored pencil on paper | Mohamad Shnewer</i></p></div>
 	</div>
 
 	<div class="body-copy">
