--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Submit your art or writing!</title>
+	<!-- Favicon stuff -->
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="favicon/site.webmanifest">
+	<!-- Font stuff -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="index-responsive-final.css" />
+	<!-- CSS stuff -->
+	<link type="text/css" rel="stylesheet" href="index.css" />
 </head>
 
 <body>
 	
 	<div class="body-copy">
-		<h1 class="ubuntu-bold">'Elite' media coverage of Muslims tends to be driven by law enforcement narratives</h1>
+		<h1 style="text-align: center;" class="ubuntu-bold">'Elite' media coverage of Muslims<br> tends to be driven by law enforcement narratives</h1>
 		<p id="subhed" class="open-sans-copy"><i>We don't have to rely on these media platforms to tell our stories. Our team is researching the narratives given to us about specific Muslim men -- and whether or not they've met journalistic standards -- and collecting your stories to create counternarratives.</i></p>
 		<p id="subhed" class="open-sans-copy"><i>We're asking those affected by the 'War On Terror' to send their photos, writing, and art to <a href="mailto:counternarratives2025@gmail.com" target="_blank">counternarratives2025@gmail.com</a> for our upcoming symposium.</i></p>
+		<p style="padding-top: 50px;color: #2F4858;" id="subhed" class="open-sans-copy"><a href="project.html"> Read more about our wider project here.</a></p>
 	</div>
 
 	<div class="photo-story">
-		<img src="OB2.JPG" />
+		<img src="imgs/OB2.JPG" />
 		<h4>Our roots</h4>
 		<div><p class="open-sans-copy"><i>Growing up biracial is confusing, but growing up biracial in rural Ohio is a whole other story. My sister and I did our best to lean into our Pakistani heritage; we wore gifts from our family in Karachi, read books about Pakistan, and even took Urdu for a few years. The older I got, the more I realized how politicized that identity is. Today, I do my best to stay in touch with that side, but it’s harder the more demonized South Asian people are.</i></p></div>
 	</div>
@@ -36,7 +44,7 @@
 	</div>
 
 	<div class="photo-story">
-		<img src="Shnewer.jpg" />
+		<img src="imgs/Shnewer.jpg" />
 		<h4>Eid mubarak -- Eid Mubarak is an Arabic, Islamic greeting which means “Blessed Feast” which marks the end of Ramadan and the fast.</h4>
 		<div><p class="open-sans-copy"><i>Colored pencil on paper | Mohamad Shnewer</i></p></div>
 	</div>
@@ -50,7 +58,7 @@
 	</div>
 
 	<div class="photo-story">
-		<img src="farzana.jpg" />
+		<img src="imgs/farzana.jpg" />
 		<h4>Farzana Aunty</h4>
 		<p class="open-sans-copy"><i>Farzana Aunty died when she was 37, in a car accident. She was one of the many people in my childhood who taught my friends and I how to sing, how important beauty is in our faith and how to create it in community. In early 'War on Terror' times, when the mantra was, "Keep your head down," this was a rare message to receive from any adult. The same war is still raging on around us (I'm almost the age she was then, I think about this all the time), but when I sing something in jamatkhana now, and everyone sings with me, it feels like my inside and outside clicking together. </i></p>
 	</div>
@@ -76,7 +84,7 @@
 
 	<!-- About Row -->
 	<div class="ubuntu-bold" id="end">
-		<h5>This project is organized by the <a href="https://lendercenter.syr.edu/" target="_blank">Lender Center For Social Justice at Syracuse University</a>. We've received various kinds of support from the New York Humanities Center, the Coalition for Civil Freedoms, Muslim Counterpublics Lab, and Syracuse Peace Council. This page was published using Github Pages. Fonts used: Ubuntu, Open Sans.</h5>
+		<h5>This project is organized by the <a href="https://lendercenter.syr.edu/" target="_blank">Lender Center For Social Justice at Syracuse University</a>. We've received various kinds of support from the New York Humanities Center, the Coalition for Civil Freedoms, Muslim Counterpublics Lab, and Syracuse Peace Council. This page was designed by Nausheen Husain and published using Github Pages. Fonts used: Ubuntu, Open Sans.</h5>
 	</div>
 
 </body>
