Adds email address

--- a/project.html
+++ b/project.html
@@ -53,6 +53,7 @@
 		<h1 class="ubuntu-bold">Our upcoming symposium and call for art</h1>
 		<p class="open-sans-copy">Our team will host a symposium in November 2025 in Syracuse, New York. This will be a culmination of our current work, though it will continue in different ways, and will display aspects of all three prongs of our project. The symposium wil consist of findings from our academic research, art pieces by incarcerated members of our communities, generously displayed by the Coalition For Civil Freedoms, as well as selected art, poetry, prose, and memories sent in by community members. Our work will be summarized in a zine that will be available to download or take home from the symposium.</p>
 		<p class="open-sans-copy">Do you want to contribute, potentially have your work displayed at the symposium, and be compensated for it? <a href="index.html">Check out our call for art and writing here.</a></p>
+		<p class="open-sans-copy">Do you want to collaborate with us in some way? Email the project lead at nhusain@syr.edu.</p>
 	</div>
 
 	
